wp-content/plugins/crown-blocks/src/block-header/style.scss
$spacer: 0.25rem;

.wp-block-crown-blocks-header {
	margin-bottom: 1.5rem;
	padding-bottom: 0.375rem;
	position: relative;
	> hr {
		position: absolute;
		left: 0;
		bottom: 0;
		right: 0;
		height: 0.9375rem;
		background-color: red;
		border: none;
		margin: 0;
	}
	> .inner {
		margin-bottom: 1rem;
	}
	h1, h2, h3, h4, h5, h6 {
		+ p {
			margin-top: -.5rem;
		}
	}
}

